# corgi3d-contract

./: Cargo.toml  build.sh
res/: corgi3d.wasm
src/: lib.rs
